# Proejct-5

./: AddAutomaton.cpp  Automaton.h  CMakeLists.txt  ColonAutomaton.cpp  ColonDashAutomaton.cpp  CommaAutomaton.cpp  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  DataLog.cpp  DataLog.h  Database.cpp  Database.h  Fact.cpp  Fact.h  FactList.cpp  FactList.h  FactsAutomaton.cpp  FactsAutomaton.h  HeadPredicate.cpp  HeadPredicate.h  IDAutomaton.cpp  IDAutomaton.h  IDList.cpp  IDList.h  LeftParenAutomaton.cpp  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  MultiplyAutomaton.cpp  Parameter.cpp  Parameter.h  Parsepart.cpp  Parsepart.h  Parser.cpp  Parser.h  PeriodAutomaton.cpp  PeriodAutomaton.h  Q_MarkAutomaton.cpp  QueriesAutomaton.cpp  (+43 more)
